--- a/src/styles.css
+++ b/src/styles.css
@@ -121,6 +121,18 @@ img {
 /*
  * Стили компонента ImageGallery
  */
+.GalleryList {
+  display: grid;
+  width: 1200px;
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  grid-auto-rows: 260px;
+  grid-gap: 12px;
+  padding: 0;
+  list-style: none;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .ImageGallery {
   display: grid;
   max-width: calc(100vw - 48px);
